# feature-transaction-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  values.yaml
.tmp_dagster_home_1pgkl5t2/history/: runs.db
.tmp_dagster_home_1pgkl5t2/history/runs/: .db  index.db
.tmp_dagster_home_1pgkl5t2/schedules/: schedules.db
src/defs_v1/: assets.py  config.py  utils.py
src/defs_v2/: assets.py  config.py  parquet_io_manager.py  schedules.py
src/feature_transaction_pipeline/: definitions.py
src/feature_transaction_pipeline/defs/: assets.py  config.py  resources.py  schedules.py  utils.py
tests/: test_feature_v2.py  test_feature_v3.py  test_features_v1.py
