[project]
name = "feature_transaction_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.19",
    "dagster-dg-cli>=1.12.19",
    "dagster-k8s>=0.28.19",
    "dagster-postgres>=0.28.19",
    "dagster-webserver>=1.12.19",
    "huggingface-hub>=1.7.1",
    "polars>=1.39.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "feature_transaction_pipeline"
registry_modules = [
    "feature_transaction_pipeline.components.*",
]


